* Wed Jul 03 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.2
- Updated README.md
- Added REFERENCE.md

* Fri Jun 14 2019 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.1
- Removed the HIRS package dependency list that was in common.yaml,
  as the HIRS RPM now appropriately specifies its dependencies.
- Removed the softlink in the install manifest, because it is no longer
  needed with the newer HIRS package.
- Updated the upper bound of puppet and stdlib to < 7.0.0
- Updated RPMs for installation and testing
- Updated Travis and GitLab Test matrices

* Fri Mar 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Dec 21 2018 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.0
- Initial commit.
- Install HIRS Provisioner and check-in with Attestation Certificate Authority.