@@ -1,3 +1,7 @@
+* Mon Mar 02 2020 Jeanne Greulich<jeanne.greulich@onyxpoint.com> - 0.1.3
+- Updated tests to use tpm2 simulator package from download.simp-project.
+- HIRS tpm provisioner software does not run on EL8 yet.
+
 * Wed Jul 03 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.2
 - Updated README.md
 - Added REFERENCE.md
